RendeerAlpha/include/RendeerC.h

// `user` is whatever was handed to the function that registered this. The engine never
// looks inside it.
typedef void (*rda_callback)(void* user);
RDA_C_API uint32_t rda_signal_find(const char* name);
RDA_C_API int rda_signal_get_number(uint32_t signal, double* out);
RDA_C_API int rda_signal_set_number(uint32_t signal, double value);
RDA_C_API int rda_signal_get_bool(uint32_t signal, int* out);
RDA_C_API int rda_signal_set_bool(uint32_t signal, int value);
// Writes at most `capacity` bytes including the terminator and reports the length the
// text actually is, so a caller that guessed too small can ask again with the right
// size. -1 means the signal does not exist.
RDA_C_API int rda_signal_get_text(uint32_t signal, char* buffer, int capacity);
RDA_C_API int rda_signal_set_text(uint32_t signal, const char* value);
RDA_C_API uint32_t rda_table_find(const char* name);
// The index of a declared column, or -1. Columns are addressed by index because that is
// what a run of values is written against, and the index never moves once declared.
RDA_C_API int rda_table_column(uint32_t table, const char* column);
// How many rows it holds, or -1 if there is no such table.
RDA_C_API int rda_table_rows(uint32_t table);
// Grows or shrinks it. New rows are zero, false and empty.
RDA_C_API int rda_table_resize(uint32_t table, int rows);
// `count` values into `column`, starting at row `first`. Rows past the end are ignored
// rather than growing the table: how big it is stays something the caller said once.
RDA_C_API int rda_table_set_numbers(uint32_t table, int column, int first,
                                    const double* values, int count);
RDA_C_API int rda_table_set_bools(uint32_t table, int column, int first,
                                  const int* values, int count);
RDA_C_API int rda_table_set_texts(uint32_t table, int column, int first,
                                  const char* const* values, int count);
RDA_C_API int rda_table_get_number(uint32_t table, int column, int row, double* out);
RDA_C_API int rda_table_get_bool(uint32_t table, int column, int row, int* out);
// Same two-call shape as rda_signal_get_text: reports the length the text actually is,
// so a caller that guessed too small can ask again.
RDA_C_API int rda_table_get_text(uint32_t table, int column, int row,
                                 char* buffer, int capacity);
// ---- commands --------------------------------------------------------------------
// Binds a declared command to a callback, replacing any previous binding. The callback
// runs on the loop thread, inside the frame the interface invoked it in.
RDA_C_API int rda_command_bind(const char* name, rda_callback fn, void* user);
// Asks for a command as if the interface had. The interface is not the only thing that
// can want work done: a backend with a menu, a hotkey or a scheduled job wants the same
// handler to run, and `Commands::invoke` is what a C++ application already calls for it.
//
// Returns 0 when no command has that name, or when the name exists and nothing is bound
// to it -- which is a mistake worth reporting rather than a silent nothing.
//
// For a watched command (below) this queues it, exactly as a click would, so the same
// handler runs on the same thread whichever asked.
RDA_C_API int rda_command_invoke(const char* name);
// One drawing instruction. The fields are named for their position rather than their
// meaning because the meaning is the op's: a struct per shape would be a union, and a
// union is what an FFI is worst at.
typedef struct rda_draw_cmd {
	int32_t  op;
	uint32_t color;  // 0xAABBGGRR, the same packing a theme compiles to
	float    a, b, c, d;
	float    e;
	const char* text; // RDA_DRAW_TEXT only; copied, so it need not outlive the call
} rda_draw_cmd;
// Replaces everything the named viewport was drawing, and it keeps drawing that until
// replaced. One call for the whole picture, for the same reason a table is filled a
// column at a time: each call crosses to the loop thread and waits.
//
// `count` of 0 clears it -- a viewport drawn empty is blank, which is different from one
// no backend has ever touched, where the engine's own scene shows instead.
RDA_C_API int rda_viewport_draw(const char* name, const rda_draw_cmd* commands, int count);
// Swaps the whole look, while the window stays open. The compiled .rdth replaces what
// was there rather than layering on top of it, so a theme that simply does not mention
// `button.danger` does not inherit the last one's.
//
// Every colour and radius that the new theme moves travels there over the transitionMs
// the new theme gives it, because a widget's colour was already an animated value and
// this only changes where it is heading. A theme whose variants say 0 swaps instantly.
//
// Added in ABI 1.1. Refused, with the reason, if the file will not load -- and the
// interface keeps the theme it had rather than falling back to the built-in look.
RDA_C_API int rda_set_theme(const char* path);
// The size the viewport was last laid out at, in the same pixels the drawing uses. Both
// zero until a frame has placed it, so a backend that wants to fit its drawing to the
// surface should draw again when it changes rather than only once at start-up.
RDA_C_API int rda_viewport_size(const char* name, float* out_width, float* out_height);