bindings/csharp/Engine.cs


		// ---- signals ----
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern uint rda_signal_find(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_signal_get_number(uint signal, out double value);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_signal_set_number(uint signal, double value);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_signal_get_bool(uint signal, out int value);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_signal_set_bool(uint signal, int value);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_signal_get_text(uint signal, byte[]? buffer, int capacity);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_signal_set_text(uint signal,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string value);

		// A name lookup is a round trip to the loop thread, so it happens once.
		private static readonly Dictionary<string, uint> Ids = new Dictionary<string, uint>();

		private static uint Signal(string name) {
			if (Ids.TryGetValue(name, out uint found)) return found;
			uint id = rda_signal_find(name);
			if (id == NoSignal) Fail("no signal called '" + name + "'");
			Ids[name] = id;
			return id;
		}

		/// <summary>Reads a number signal.</summary>
		public static double GetNumber(string name) {
			if (rda_signal_get_number(Signal(name), out double value) == 0)
				Fail("cannot read '" + name + "'");
			return value;
		}
		/// <summary>Writes a number signal.</summary>
		public static void SetNumber(string name, double value) {
			if (rda_signal_set_number(Signal(name), value) == 0)
				Fail("cannot write '" + name + "'");
		}
		/// <summary>Reads a boolean signal.</summary>
		public static bool GetBool(string name) {
			if (rda_signal_get_bool(Signal(name), out int value) == 0)
				Fail("cannot read '" + name + "'");
			return value != 0;
		}
		/// <summary>Writes a boolean signal.</summary>
		public static void SetBool(string name, bool value) {
			if (rda_signal_set_bool(Signal(name), value ? 1 : 0) == 0)
				Fail("cannot write '" + name + "'");
		}
		/// <summary>Writes a text signal.</summary>
		public static void SetText(string name, string value) {
			if (rda_signal_set_text(Signal(name), value ?? "") == 0)
				Fail("cannot write '" + name + "'");
		}

		// The engine reports what the text *is* rather than what fitted, so a first
		// guess that was too small costs one more call and never a truncation nobody
		// notices. A guess that was right -- which is nearly always -- costs one call
		// instead of the two a length-first protocol would always pay.
		private const int TextGuess = 256;

		/// <summary>Reads a text signal, retrying once if the first buffer was too small.</summary>
		public static string GetText(string name) {
			uint id = Signal(name);
			byte[] buffer = new byte[TextGuess];
			int length = rda_signal_get_text(id, buffer, buffer.Length);
			if (length < 0) Fail("cannot read '" + name + "'");
			if (length >= buffer.Length) {
				buffer = new byte[length + 1];
				length = rda_signal_get_text(id, buffer, buffer.Length);
				if (length < 0) Fail("cannot read '" + name + "'");
			}
			return Encoding.UTF8.GetString(buffer, 0, length);
		}

		// ---- tables ----
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern uint rda_table_find(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_table_column(uint table,
			[MarshalAs(UnmanagedType.LPUTF8Str)] string column);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_table_rows(uint table);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_table_resize(uint table, int rows);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_table_set_numbers(uint table, int column, int first,
			double[] values, int count);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_table_set_bools(uint table, int column, int first,
			int[] values, int count);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_table_set_texts(uint table, int column, int first,
			IntPtr[] values, int count);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_table_get_number(uint table, int column, int row, out double value);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_table_get_bool(uint table, int column, int row, out int value);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_table_get_text(uint table, int column, int row,
			byte[]? buffer, int capacity);

		private static readonly Dictionary<string, uint> TableIds = new Dictionary<string, uint>();
		private static readonly Dictionary<string, int> ColumnIds = new Dictionary<string, int>();

		private static uint Table(string name) {
			if (TableIds.TryGetValue(name, out uint found)) return found;
			uint id = rda_table_find(name);
			if (id == NoTable) Fail("no table called '" + name + "'");
			TableIds[name] = id;
			return id;
		}

		private static int Column(string table, string column) {
			string key = table + " " + column;
			if (ColumnIds.TryGetValue(key, out int found)) return found;
			int index = rda_table_column(Table(table), column);
			if (index < 0) Fail("no column '" + column + "' in '" + table + "'");
			ColumnIds[key] = index;
			return index;
		}

		/// <summary>How many rows a table holds.</summary>
		public static int TableRows(string table) {
			int rows = rda_table_rows(Table(table));
			if (rows < 0) Fail("cannot read the size of '" + table + "'");
			return rows;
		}

		/// <summary>Grows or shrinks a table. New rows are zero, false and empty.</summary>
		public static void TableResize(string table, int rows) {
			if (rda_table_resize(Table(table), rows < 0 ? 0 : rows) == 0)
				Fail("cannot resize '" + table + "'");
		}

		/// <summary>Writes a run of numbers into one column, starting at <paramref name="first"/>.</summary>
		public static void SetNumbers(string table, string column, double[] values, int first = 0) {
			if (values.Length == 0) return;
			if (rda_table_set_numbers(Table(table), Column(table, column), first,
					values, values.Length) == 0)
				Fail("cannot write " + table + "." + column);
		}

		/// <summary>Writes a run of booleans into one column, starting at <paramref name="first"/>.</summary>
		public static void SetBools(string table, string column, bool[] values, int first = 0) {
			if (values.Length == 0) return;
			int[] block = new int[values.Length];
			for (int i = 0; i < values.Length; ++i) block[i] = values[i] ? 1 : 0;
			if (rda_table_set_bools(Table(table), Column(table, column), first,
					block, block.Length) == 0)
				Fail("cannot write " + table + "." + column);
		}

		/// <summary>Writes a run of strings into one column, starting at <paramref name="first"/>.</summary>
		public static void SetTexts(string table, string column, string[] values, int first = 0) {
			if (values.Length == 0) return;
			// An array of UTF-8 strings is the one shape the marshaller will not build,
			// so the pointers are made here and freed in the same breath.
			IntPtr[] pointers = new IntPtr[values.Length];
			try {
				for (int i = 0; i < values.Length; ++i) {
					pointers[i] = Utf8(values[i] ?? "");
				}
				if (rda_table_set_texts(Table(table), Column(table, column), first,
						pointers, pointers.Length) == 0)
					Fail("cannot write " + table + "." + column);
			} finally {
				foreach (IntPtr one in pointers) {
					if (one != IntPtr.Zero) Marshal.FreeHGlobal(one);
				}
			}
		}

		internal static IntPtr Utf8(string value) {
			byte[] bytes = Encoding.UTF8.GetBytes(value);
			IntPtr block = Marshal.AllocHGlobal(bytes.Length + 1);
			Marshal.Copy(bytes, 0, block, bytes.Length);
			Marshal.WriteByte(block, bytes.Length, 0);
			return block;
		}

		/// <summary>Reads one number cell.</summary>
		public static double GetCellNumber(string table, string column, int row) {
			if (rda_table_get_number(Table(table), Column(table, column), row, out double value) == 0)
				Fail("cannot read " + table + "." + column + "[" + row + "]");
			return value;
		}

		/// <summary>Reads one boolean cell.</summary>
		public static bool GetCellBool(string table, string column, int row) {
			if (rda_table_get_bool(Table(table), Column(table, column), row, out int value) == 0)
				Fail("cannot read " + table + "." + column + "[" + row + "]");
			return value != 0;
		}

		/// <summary>Reads one text cell.</summary>
		public static string GetCellText(string table, string column, int row) {
			uint id = Table(table);
			int index = Column(table, column);
			byte[] buffer = new byte[TextGuess];
			int length = rda_table_get_text(id, index, row, buffer, buffer.Length);
			if (length < 0) Fail("cannot read " + table + "." + column + "[" + row + "]");
			if (length >= buffer.Length) {
				buffer = new byte[length + 1];
				length = rda_table_get_text(id, index, row, buffer, buffer.Length);
				if (length < 0) Fail("cannot read " + table + "." + column + "[" + row + "]");
			}
			return Encoding.UTF8.GetString(buffer, 0, length);
		}

		// ---- commands ----
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_command_bind(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name, Callback fn, IntPtr user);
		[DllImport(Library, CallingConvention = Cdecl)]
		private static extern int rda_command_invoke(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name);

		/// <summary>
		/// Binds a handler to a declared command.
		///
		/// A real callback, unlike Node's: the engine calls this on its own loop thread,
		/// inside the frame the interface asked in, because the CLR is happy to be
		/// entered from a foreign thread. Which means the handler must be quick, and must
		/// not block on anything the loop is responsible for.
		/// </summary>
		public static void OnCommand(string name, Action handler) {
			if (handler == null) throw new RdaException("a handler for '" + name + "' has to be a function");
			Callback trampoline = _ => handler();
			Alive.Add(trampoline);   // see the header comment
			if (rda_command_bind(name, trampoline, IntPtr.Zero) == 0)
				Fail("cannot bind '" + name + "'");
		}

		/// <summary>Asks for a command as if the interface had.</summary>
		public static void Invoke(string name) {
			if (rda_command_invoke(name) == 0) Fail("cannot invoke '" + name + "'");
		}

		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_set_theme([MarshalAs(UnmanagedType.LPUTF8Str)] string path);

		// ---- viewports ----
		// Laid out exactly as rda_draw_cmd. The text is an IntPtr rather than a string
		// because the runtime will not marshal a string field inside an array of structs
		// without copying the whole array twice; Drawing allocates and frees them itself.
		[StructLayout(LayoutKind.Sequential)]
		internal struct DrawCmd {
			public int   Op;
			public uint  Color;
			public float A, B, C, D;
			public float E;
			public IntPtr Text;
		}

		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_viewport_draw(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name, [In] DrawCmd[] commands, int count);
		[DllImport(Library, CallingConvention = Cdecl)]
		internal static extern int rda_viewport_size(
			[MarshalAs(UnmanagedType.LPUTF8Str)] string name, out float width, out float height);

		internal static void Keep(object trampoline) => Alive.Add(trampoline);
	}
}
